--- a/.github/workflows/run-unit-test-and-upload-codecov.yml
+++ b/.github/workflows/run-unit-test-and-upload-codecov.yml
@@ -74,7 +74,50 @@ jobs:
       # Run all unit test, integration test, and generate combined coverage report
       - name: Build, run unit test, and generate coverage report
         run: |
-          ./do-tests.bash
+          set -xue -o pipefail
+
+          # Start from scratch
+          rm -rf build/ install/
+          source /opt/ros/humble/setup.bash
+
+          # Build for test coverage
+          colcon build --cmake-args -DCOVERAGE=1
+          source install/setup.bash
+
+          # Run all tests
+          colcon test
+
+          # Get test result
+          colcon test-result --test-result-base build/swift_scout
+
+          # Generate individual coverage reports
+          echo "DEBUG_LINE_2 = START"
+          colcon build \
+            --event-handlers console_cohesion+ \
+            --packages-select sar \
+            --cmake-target "test_coverage" \
+            --cmake-arg -DUNIT_TEST_ALREADY_RAN=1
+          MY_MODEL_COVERAGE_INFO=./build/sar/test_coverage.info
+          ros2 run swift_scout generate_coverage_report.bash
+          MY_CONTROLLER_COVERAGE_INFO=./build/swift_scout/test_coverage.info
+          echo "DEBUG_LINE_2 = FINISH"
+
+          # Combine coverage reports
+          COMBINED_TEST_COVERAGE=combined_test_coverage
+          if [[ -d $COMBINED_TEST_COVERAGE ]]; then
+            rm -rf $COMBINED_TEST_COVERAGE
+          fi
+          mkdir $COMBINED_TEST_COVERAGE
+
+          ALL_COVERAGE_INFO=./build/test_coverage_merged.info
+          lcov -a $MY_MODEL_COVERAGE_INFO -a \
+               $MY_CONTROLLER_COVERAGE_INFO -o \
+               $ALL_COVERAGE_INFO
+
+          genhtml --output-dir $COMBINED_TEST_COVERAGE $ALL_COVERAGE_INFO
+
+          # Optionally show the report locally (disabled for CI)
+          # open $COMBINED_TEST_COVERAGE/index.html || true
 
       # Upload coverage result to CodeCov
       - name: Upload coverage result to CodeCov
@@ -83,5 +126,4 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
           files: ${{github.workspace}}/build/test_coverage_merged.info
           fail_ci_if_error: true # optional (default = false)
-          verbose: true # optional (default = false)      
-          
+          verbose: true # optional (default = false)
