Updated Final Files

--- a/src/sar/test/CMakeLists.txt
+++ b/src/sar/test/CMakeLists.txt
@@ -1,1 +1,15 @@
-// Stub 
+# Add executable
+add_executable(my_model_tester
+  main.cpp
+  test.cpp
+)
+
+# Link libraries
+target_link_libraries(my_model_tester PUBLIC
+  GTest::GTest
+  GTest::Main
+  sar
+)
+
+# Discover Google Tests
+gtest_discover_tests(my_model_tester)
